ec2_instance/security_group.tf
resource "aws_security_group" "webSG" {
    name   = var.security_group_name
    vpc_id = aws_vpc.shiv_vpc.id

    tags = {
        Name = var.security_group_name
    }

    ingress {
        from_port   = 80
        to_port     = 80
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
